2016-04-22  c.hetherington  <cth@carlh.net>

	* Separate left-only and right-only video content
	in the timeline (#845).

2016-04-21  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-04-19  c.hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

2016-04-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.14 released.

2016-04-18  Carl Hetherington  <cth@carlh.net>

	* Possibly fix strange paths when uploading DCPs using
	FTP/SCP.

2016-04-17  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-04-15  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Fix forcing of the "video frame rate" for audio content.

	* Updated ru_RU and uk_UA translations from Igor Voytovich.

2016-04-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.13 released.

2016-04-14  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.7.12 released.

2016-04-11  Carl Hetherington  <cth@carlh.net>

	* Hopefully fix strange limits on x/y offset of subtitles.

	* Add UTC-3:30 timezone to Cinema configuration (#831).

	* Add option to preview left or right eye (#809).

2016-04-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.11 released.

2016-04-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.10 released.

2016-04-08  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-04-07  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-04-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.9 released.

2016-04-05  Carl Hetherington  <cth@carlh.net>

	* Support bold in DCP subtitles.

2016-04-04  Carl Hetherington  <cth@carlh.net>

	* Fix failure to keep italic etc. going across
	multiple lines of a SubRip subtitle (#837).
