@@ -752,6 +752,13 @@ private:
 		if (d->ShowModal() == wxID_OK) {
 			try {
 				dcp::Certificate c (dcp::file_to_string (wx_to_std (d->GetPath ())));
+				if (c.extra_data ()) {
+					message_dialog (
+						this,
+						_("This file contains other certificates (or other data) after its first certificate. "
+						  "Only the first certificate will be used.")
+						);
+				}
 				_chain->add (c);
 				_set (_chain);
 				update_certificate_list ();
